--- a/tex/relazione.tex
+++ b/tex/relazione.tex
@@ -145,6 +145,11 @@
 
     \section{Valutazione delle performance}
 
+    I seguenti test sono stati svolti su \texttt{andromeda.di.unipi.it},
+    macchina dotata di 16 core. In particolare sono stati utilizzati per
+    la raccolta dati gli script \texttt{test\_sequential} e
+    \texttt{test\_parallel} descritti in appendice.
+
     Siano \(T_{\text{seq}}\) e \(T_{\text{par}}(n)\) rispettivamente il 
     service time dell'applicazione sequenziale e di quella parallela con
     grado di parallelismo \(n\). L'esecuzione degli script
@@ -290,6 +295,8 @@
     al variare della soglia da \(0\) a \(99\). Per ottenerla \`e sufficiente
     invocare la rule \texttt{make gif} del \texttt{Makefile} oppure visitare il
     seguente indirizzo: \href{http://raw.github.com/jacquerie/SPM/master/lena.gif}{\underline{http://raw.github.com/jacquerie/SPM/master/lena.gif}}.
+
+  \newpage
 
   \appendix
     \section{Manuale d'uso}
