Switch from lena.ppm to just one lena.png file.

--- a/tex/relazione.tex
+++ b/tex/relazione.tex
@@ -248,7 +248,7 @@
       \centering
       \begin{subfigure}[b]{0.33\textwidth}
         \centering
-        \includegraphics[width=\textwidth]{tex/img/lena.png}
+        \includegraphics[width=\textwidth]{lena.png}
         \caption*{Originale}
       \end{subfigure}
       \hspace{0.15\textwidth}
